<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MarvelQuiz</string>
    <string name="marvel_trivia">Marvel Trivia</string>
    <string name="first_question">What is Peter Parker middle name?</string>
    <string name="question1_answer1">William</string>
    <string name="question1_answer2">Benjamin</string>
    <string name="second_question">2. S.H.I.E.L.D is highest ranking agent is?</string>
    <string name="question2_answer1">Nick Fury</string>
    <string name="question2_answer2">Benjamin</string>
    <string name="question2_answer3">Peter Parker</string>
    <string name="question2_answer4">Natalia Romanova</string>
    <string name="third_question">3.Captain America was frozen in which war?</string>
    <string name="question3_answer1">World War 1</string>
    <string name="question3_answer2">World War 2</string>
    <string name="question3_answer3">Cold War</string>
    <string name="question3_answer4">American Civil War</string>
    <string name="fourth_question">4.Which of these characters played in Marvel is movies?</string>
    <string name="question4_answer1">Iron Man</string>
    <string name="question4_answer2">Spider-Man</string>
    <string name="question4_answer3">Superman</string>
    <string name="question4_answer4">Ant-Man</string>
    <string name="question5_edit_text">Who is the character in the picture?</string>
    <string name="checked_button">Checked</string>
    <string name="you_answered">You answered %d questions correctly, </string>
    <string name="excellent"> Excellent!</string>
    <string name="try_again">Try again!</string>
    <string name="thor">Thor</string>
</resources>
